# OmniCCG

./: README.md  analysis.py  code_operations.py  core.py  get_code.py  get_code_snippets.py  install.sh  main.py  metrics.py  metrics.xml  new_features.txt  obs.txt  omniccg.py  result.xml  wrapper_solution.py
OmniCCG-API/: Dockerfile  README.md  core.py  docker-compose.yml  main.py  pyproject.toml
OmniCCG-CLI/: README.md
OmniCCG-CLI/results_of_evaluation/: general_times.txt
OmniCCG-CLI/results_of_evaluation/PeerBanHelper/: ccg_data.xml  ccg_metrics.xml
OmniCCG-CLI/results_of_evaluation/booklore/: ccg_data.xml  ccg_metrics.xml
OmniCCG-CLI/results_of_evaluation/pkl/: ccg_data.xml  ccg_metrics.xml
OmniCCG-CLI/results_of_evaluation/spring-ai-alibaba/: ccg_data.xml  ccg_metrics.xml
OmniCCG-Web/: .env  README.md
OmniCCG-Web/src/lib/: examplesData.ts
OmniCCG-Web/src/pages/: Configure.tsx  Home.tsx
OmniCCG-Web/src/services/: api.ts
