[tool.poetry]
name = "omniccg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
requests = "^2.32.5"
gitpython = "^3.1.45"
flask-cors = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
